@@ -23,6 +23,7 @@ import org.apache.cayenne.access.sqlbuilder.sqltree.UpdateSetNode;
 import org.apache.cayenne.access.sqlbuilder.sqltree.TableNode;
 import org.apache.cayenne.access.sqlbuilder.sqltree.UpdateNode;
 import org.apache.cayenne.access.sqlbuilder.sqltree.WhereNode;
+import org.apache.cayenne.map.DbEntity;
 
 /**
  * @since 4.2
@@ -34,6 +35,11 @@ public class UpdateBuilder extends BaseBuilder {
     private static final int WHERE_NODE = 2;
 
     public UpdateBuilder(String table) {
+        super(new UpdateNode(), WHERE_NODE + 1);
+        node(TABLE_NODE, () -> new TableNode(table, null));
+    }
+
+    public UpdateBuilder(DbEntity table) {
         super(new UpdateNode(), WHERE_NODE + 1);
         node(TABLE_NODE, () -> new TableNode(table, null));
     }
